# Resume_Scanner_SoftwareEngineering

./: .coverage  .coveragerc  .dockerignore  .gitignore  .gitignore.swp  Dockerfile  PROJECT_CONTEXT.md  README.md  conftest.py  main.py  pyproject.toml
.github/workflows/: ci-cd.yml  deploy.yml
app/models/: schemas.py
app/routers/: analyze.py  ats.py  resume.py  roles.py
src/resume_scanner/: .main.py.swp  main.py
src/resume_scanner/app/: utils.py
src/resume_scanner/app/models/: schemas.py
src/resume_scanner/app/routers/: analyze.py  ats.py  resume.py  roles.py
tests/: conftest.py  test_ats.py  test_health.py  test_resume.py
