[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "resume-scanner"
version = "0.1.0"
description = "API-based service for analyzing resumes and extracting insights"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
]

[project.scripts]
resume-scanner = "resume_scanner.main:run"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
